[package]
name = "saddle-world-day-night"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-world-day-night"
license = "MIT-0"
description = "Time-of-day and outdoor lighting orchestration for Bevy"

[dependencies]
bevy = { version = "0.18", features = ["webgpu"] }

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
