[workspace]
members = [
    "support",
    "basic",
    "full_cycle",
    "latitude",
    "atmosphere",
    "fixed_time",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["webgpu"] }
saddle-world-day-night = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
