[package]
name = "saddle-world-day-night-example-atmosphere"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-world-day-night = { workspace = true }
saddle-world-day-night-example-support = { path = "../support" }
saddle-world-weather = { git = "https://github.com/julien-blanchon/saddle-world-weather" }
saddle-pane = { workspace = true }

[lints]
workspace = true
