[package]
name = "saddle-world-day-night-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["dev"]
dev = ["dep:bevy_brp_extras"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = "0.18"
saddle-world-day-night = { workspace = true }
saddle-world-day-night-example-support = { path = "../support" }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
saddle-pane = { workspace = true }

[lints]
workspace = true
